# aiexp

./: .gitignore  .p4ignore  pyproject.toml
_shared/fine_tuning/run_20260311_llm/: training_parameters.json
fine_tuning/exp_tune/: =0.46.1  compare_training.ipynb  compare_training.py  fine_tuning.ipynb
fine_tuning/exp_tune/_env/: env_tune
jupiter/: jupyter_notebook_config.py
llama.cpp/: exp_1.py
llama.cpp/_venv/: venv_cpp.sh
pytorch/: exp_1.ipynb
training_dynamics/: env.md  running_model.py  test1.py
training_dynamics/_venv/: install.bash
utils/: logging.py
